# solution-blueprints

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
aimcharts/aimchart-chromadb/: Chart.yaml  README.md  values.yaml
aimcharts/aimchart-embedding/: Chart.yaml  README.md  values.schema.json  values.yaml
aimcharts/aimchart-llm/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
aimcharts/aimchart-qwen-asr/: Chart.yaml  README.md  requirements.txt  values.yaml
aimcharts/aimchart-qwen-tts/: Chart.yaml  README.md  values.yaml
aimcharts/aimchart-whisper/: .helmignore  Chart.yaml  README.md  values.yaml
library-charts/aim-llm/: Chart.yaml  README.md
platform-blueprints/: README.md
platform-blueprints/cisco-deskside-secure-agent-gateway/: .gitignore  LICENSE
platform-blueprints/deskside-secure-agent-gateway/: .gitignore  README.md
solution-blueprints/agentic-rag/: Chart.yaml  README.md  values.yaml
solution-blueprints/agentic-testing/: Chart.yaml  README.md  values.yaml
solution-blueprints/agentic-translation/: Chart.yaml  README.md  values.yaml
solution-blueprints/autogen-studio/: Chart.yaml  README.md  values.yaml
solution-blueprints/code-docs-builder/: .helmignore  Chart.yaml  NOTICE  README.md  values.yaml
solution-blueprints/fsi/: Chart.yaml  (+2 more)
solution-blueprints/telecom-assistant/app/VoiceAgent/: agent.py  agent_api.py  bss_gateway_client.py  ingest_chromadb.py  libre_desk_client.py  livekit_agent_trigger_redis.py  pyproject.toml  session_storage_redis.py  settings.py  system_prompts.py  vector_store.py  vlm_client.py
(+708 files in other folders)
